# aeroworks_quad_control

./: CMakeLists.txt  README.md  mainpage.dox  manifest.xml  package.xml
launch/: aeroquad_controller.launch  aeroquad_controller.launch~  controller_module.launch
msg/: gains.msg
py/: controller.glade  controller.glade~  controller.py
src/: battery_protector.cpp  controller.cpp  state_estimation.cpp
